Refactor add validation copyTopic